--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -1,36 +1,80 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-# Controls when the action will run. 
+name: test_build
+
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    branches: [ main ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        python-version: [3.8]
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - uses: actions/checkout@v2
+      with:
+        submodules: recursive
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+        
+    - name: Generate Version Output
+      id: generate_version_output
+      run: echo "::set-output name=version::$(cat VERSION)"
+      shell: bash
+        
+    - name: Print Version Information
+      run: echo "Version ${{ steps.generate_version_output.outputs.version }}"
+      shell: bash
+   
+    - name: Generate OS Release Output
+      id: generate_os_release_name_output
+      run: echo "::set-output name=os_release_name::$(lsb_release -i -s)"
+      shell: bash
+        
+    - name: Generate OS Release Version Output
+      id: generate_os_release_version_output
+      run: echo "::set-output name=os_release_version::$(lsb_release -r -s)"
+      shell: bash       
+        
+    - name: Generate OS Release Version Output
+      id: generate_os_release_architecture_output
+      run: echo "::set-output name=os_release_architecture::$(uname -i)"
+      shell: bash   
+          
+    - name: Generate Release File Name
+      id: generate_release_file_name
+      run: |
+        echo "::set-output name=release_file_name::opentera-webrtc-native-client-${{runner.os}}-\
+        ${{ steps.generate_os_release_name_output.outputs.os_release_name }}-\
+        ${{ steps.generate_os_release_version_output.outputs.os_release_version }}-\
+        ${{ steps.generate_os_release_architecture_output.outputs.os_release_architecture }}-\
+        ${{ steps.generate_version_output.outputs.version }}"
+          
+    - name: Print Release File Name
+      run: echo "Release File Name ${{ steps.generate_release_file_name.outputs.release_file_name }}"
+      shell: bash
+        
+    - name: Install system dependencies
+      run: | 
+        sudo apt-get update
+        sudo apt-get install ninja-build cmake build-essential libssl-dev libboost-all-dev 
+        sudo apt-get install libglib2.0-dev libgtk-3-dev libpulse-dev libasound2-dev 
+        sudo apt-get install aarch64-linux-gnu-gcc aarch64-linux-gnu-g++
+        sudo mkdir build
+        
+    - name: Run CMake and build opentera-webrtc-native-client
+      working-directory: build
+      run: |
+        cmake ../
+        make -j2
+        make install
+        
