--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -68,7 +68,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install ninja-build cmake build-essential libssl-dev libboost-all-dev 
         sudo apt-get install libglib2.0-dev libgtk-3-dev libpulse-dev libasound2-dev 
-        sudo apt-get install aarch64-linux-gnu-gcc aarch64-linux-gnu-g++
+        sudo apt-get install g++-aarch64-linux-gnu gcc-aarch64-linux-gnu
         sudo mkdir build
         
     - name: Run CMake and build opentera-webrtc-native-client
