--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -12,19 +12,16 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-20.04
+    runs-on: {{ matrix.os}}
     strategy:
       matrix:
-        python-version: [3.8]
+        os: [ubuntu-18.04 ubuntu-20.04]
+        architecture: [arm64]
 
     steps:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
         
     - name: Generate Version Output
       id: generate_version_output
