--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-18.04 ubuntu-20.04]
+        os: [ubuntu-18.04, ubuntu-20.04]
         architecture: [arm64]
 
     runs-on: ${{ matrix.os }}
