--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -64,9 +64,13 @@ jobs:
         sudo apt-get install ninja-build cmake build-essential libssl-dev libboost-all-dev 
         sudo apt-get install libglib2.0-dev libgtk-3-dev libpulse-dev libasound2-dev 
         sudo apt-get install g++-aarch64-linux-gnu gcc-aarch64-linux-gnu
-        sudo mkdir build
+  
+    - name: Create build directory
+      working-directory: .
+      run: |
+        mkdir build
         
-    - name: Run CMake and build opentera-webrtc-native-client
+    - name: Run CMake and build webrtc-native-build
       working-directory: build
       run: |
         cmake ../
