Added build type and architecture args

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,18 +2,28 @@ cmake_minimum_required(VERSION 3.10.0)
 
 project(webrtc-native-build)
 
-#TODO Verify arch for compilation native VS cross compilation...
-set(CMAKE_SYSTEM_NAME Linux)
-set(CMAKE_SYSTEM_PROCESSOR arm64)
+
+# Verify build architecture
+if (CMAKE_BUILD_ARCHITECTURE MATCHES arm64)
+    set(CMAKE_SYSTEM_NAME Linux)
+    set(CMAKE_SYSTEM_PROCESSOR arm64)
+    SET(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM BOTH)
+    SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
+    SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
+    set(CMAKE_SYSROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/build/linux/debian_sid_arm64-sysroot)
+    set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
+    set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++)
+else()
+    set(CMAKE_BUILD_ARCHITECTURE amd64)
+endif()
+
+# Verify build type
+if (NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif ()
 
 
-SET(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM BOTH)
-SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
-SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
-set(CMAKE_SYSROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/build/linux/debian_sid_arm64-sysroot)
-
-set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
-set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++)
+message(STATUS "Building ${CMAKE_PROJECT_NAME} with Architecture: ${CMAKE_BUILD_ARCHITECTURE} Build type: ${CMAKE_BUILD_TYPE}")
 
 
 file(STRINGS ${CMAKE_CURRENT_SOURCE_DIR}/VERSION VERSION_FROM_FILE)
@@ -24,7 +34,7 @@ list(GET VERSION_LIST 2 WEBRTC_NATIVE_BUILD_VERSION_PATCH)
 
 SET(WEBRTC_NATIVE_BUILD_VERSION ${WEBRTC_NATIVE_BUILD_VERSION_MAJOR}.${WEBRTC_NATIVE_BUILD_VERSION_MINOR}.${WEBRTC_NATIVE_BUILD_VERSION_PATCH})
 
-message("WEBRTC_NATIVE_BUILD_VERSION : ${WEBRTC_NATIVE_BUILD_VERSION}")
+message(STATUS "WEBRTC_NATIVE_BUILD_VERSION : ${WEBRTC_NATIVE_BUILD_VERSION}")
 
 
 
@@ -37,9 +47,7 @@ if (POLICY CMP0048)
 endif (POLICY CMP0048)
 
 
-if (NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE Release)
-endif ()
+
 
 set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/dist/${CMAKE_BUILD_TYPE}/${CMAKE_PROJECT_NAME}-${WEBRTC_NATIVE_BUILD_VERSION})
 message(STATUS "CMAKE_INSTALL_PREFIX : ${CMAKE_INSTALL_PREFIX}")
