--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -31,29 +31,13 @@ jobs:
     - name: Print Version Information
       run: echo "Version ${{ steps.generate_version_output.outputs.version }}"
       shell: bash
-   
-    - name: Generate OS Release Output
-      id: generate_os_release_name_output
-      run: echo "::set-output name=os_release_name::$(lsb_release -i -s)"
-      shell: bash
-        
-    - name: Generate OS Release Version Output
-      id: generate_os_release_version_output
-      run: echo "::set-output name=os_release_version::$(lsb_release -r -s)"
-      shell: bash       
-        
-    - name: Generate OS Release Version Output
-      id: generate_os_release_architecture_output
-      run: echo "::set-output name=os_release_architecture::$(uname -i)"
-      shell: bash   
-          
+             
     - name: Generate Release File Name
       id: generate_release_file_name
       run: |
-        echo "::set-output name=release_file_name::webrtc-native-build-${{runner.os}}-\
-        ${{ steps.generate_os_release_name_output.outputs.os_release_name }}-\
-        ${{ steps.generate_os_release_version_output.outputs.os_release_version }}-\
-        ${{ steps.generate_os_release_architecture_output.outputs.os_release_architecture }}-\
+        echo "::set-output name=release_file_name::webrtc-native-build-${{ matrix.os }}-\
+        ${{ matrix.architecture }}-\
+        ${{ matrix.build-type }}-\
         ${{ steps.generate_version_output.outputs.version }}"
           
     - name: Print Release File Name
