--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -69,7 +69,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
         tag_name: ${{ steps.generate_version_output.outputs.version }}
-        release_name: opentera-webrtc-native-client-${{ steps.generate_version_output.outputs.version }}
+        release_name: webrtc-native-build-${{ steps.generate_version_output.outputs.version }}
         body: |
             Latest build of opentera-webrtc-native-client
             - This is a prerelease, use at your own risks.
