--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -10,6 +10,38 @@ on:
     branches: [ main ]
 
 jobs:
+
+  create-release:
+    runs-on: ubuntu-20.04
+    
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: recursive
+    
+    - name: Generate Version Output
+      id: generate_version_output
+      run: echo "::set-output name=version::$(cat VERSION)"
+      shell: bash
+        
+    - name: Print Version Information
+      run: echo "Version ${{ steps.generate_version_output.outputs.version }}"
+      shell: bash
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+        tag_name: ${{ steps.generate_version_output.outputs.version }}
+        release_name: webrtc-native-build-${{ steps.generate_version_output.outputs.version }}
+        body: |
+            Latest build of webrtc-native-build
+            - This is a prerelease, use at your own risks.
+        draft: true
+        prerelease: true
+
   build:
     strategy:
       matrix:
@@ -43,21 +75,7 @@ jobs:
     - name: Print Release File Name
       run: echo "Release File Name ${{ steps.generate_release_file_name.outputs.release_file_name }}"
       shell: bash
-    
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      with:
-        tag_name: ${{ steps.generate_version_output.outputs.version }}
-        release_name: webrtc-native-build-${{ steps.generate_version_output.outputs.version }}
-        body: |
-            Latest build of webrtc-native-build
-            - This is a prerelease, use at your own risks.
-        draft: true
-        prerelease: true
-   
+       
     - name: Install system dependencies
       run: | 
         sudo apt-get install ninja-build cmake build-essential libssl-dev libboost-all-dev 
@@ -88,7 +106,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        upload_url: ${{ create-release.steps.create_release.outputs.upload_url }}
         asset_path: dist/${{ matrix.build-type }}/${{ steps.generate_release_file_name.outputs.release_file_name }}.tar.gz
         asset_name: ${{ steps.generate_release_file_name.outputs.release_file_name }}.tar.gz
         asset_content_type: application/x-gzip   
