--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -1,9 +1,5 @@
-# This is a basic workflow to help you get started with Actions
-
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
-name: test_build
+# This workflow will create a release and build multiple versions of the webrtc library.
+name: build_and_release
 
 on:
   workflow_dispatch:
