--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -58,7 +58,13 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
-        
+    
+    - name: Get Download URL Artifact 
+    - uses: actions/download-artifact@v2
+      with:
+        name: release_url
+        path: release_url.txt
+    
     - name: Get Upload URL
       id: get_release_info
       run: |
