--- a/3rdParty/webrtc_native/CMakeLists.txt
+++ b/3rdParty/webrtc_native/CMakeLists.txt
@@ -67,6 +67,19 @@ elseif (UNIX)
     endif()
 
 
+    if (CMAKE_BUILD_ARCHITECTURE MATCHES arm32)
+        execute_process(
+                COMMAND python2 install-sysroot.py --arch=${CMAKE_BUILD_ARCHITECTURE}
+                WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/webrtc/src/build/linux/sysroot_scripts"
+                RESULT_VARIABLE build_sysroot_architecture
+        )
+            
+        if(NOT ${build_sysroot_architecture} EQUAL 0)
+            message(FATAL_ERROR "\"python install-sysroot.py --arch=arm32\" failed (${build_sysroot_architecture})")
+        endif()
+    endif()
+
+
     execute_process(
             COMMAND "${CMAKE_CURRENT_LIST_DIR}/generate_ninja_files.bash" "${CMAKE_BUILD_ARCHITECTURE}" "${CMAKE_SYSROOT}"
             WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/webrtc/src"
