--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -51,7 +51,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04]
-        architecture: [arm64, amd64]
+        architecture: [arm32, arm64, amd64]
         build-type: [Release, Debug]
 
     runs-on: ${{ matrix.os }}
