--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -98,9 +98,8 @@ jobs:
         sudo apt-get install ninja-build cmake build-essential libssl-dev libboost-all-dev 
         sudo apt-get install libglib2.0-dev libgtk-3-dev libpulse-dev libasound2-dev 
         sudo apt-get install g++-aarch64-linux-gnu gcc-aarch64-linux-gnu
-        
+        sudo apt-get install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
 
-        
     - name: Create build directory
       working-directory: .
       run: |
