--- a/.github/workflows/test_build_windows.yml
+++ b/.github/workflows/test_build_windows.yml
@@ -20,3 +20,24 @@ jobs:
         with:
           submodules: recursive
           
+      - name: Generate Version Output
+        id: generate_version_output
+        run: echo "::set-output name=version::$(cat VERSION)"
+        shell: bash
+        
+      - name: Print Version Information
+        run: echo "Version ${{ steps.generate_version_output.outputs.version }}"
+        shell: bash
+   
+      - name: Generate Release File Name
+        id: generate_release_file_name
+        run: |
+          echo "::set-output name=release_file_name::webrtc-native-build-${{ matrix.os }}-\
+          ${{ matrix.architecture }}-\
+          ${{ matrix.build-type }}-\
+          ${{ steps.generate_version_output.outputs.version }}"
+          
+      - name: Print Release File Name
+        run: echo "Release File Name ${{ steps.generate_release_file_name.outputs.release_file_name }}"
+      
+      shell: bash
