--- a/.github/workflows/test_build_windows.yml
+++ b/.github/workflows/test_build_windows.yml
@@ -19,15 +19,20 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-          
+      
+      - name:  "add-path"
+        shell: cmd
+        run:   |
+          echo ::add-path::C:\msys64\usr\bin
+     
       - name: Generate Version Output
         id: generate_version_output
-        run: echo "::set-output name=version::$(cat VERSION)"
-        shell: bash
+        run: echo ::set-output name=version::$(cat VERSION)
+        shell: cmd
         
       - name: Print Version Information
         run: echo "Version ${{ steps.generate_version_output.outputs.version }}"
-        shell: bash
+        shell: cmd
    
       - name: Generate Release File Name
         id: generate_release_file_name
@@ -36,8 +41,10 @@ jobs:
           ${{ matrix.architecture }}-\
           ${{ matrix.build-type }}-\
           ${{ steps.generate_version_output.outputs.version }}"
+        shell: cmd
           
       - name: Print Release File Name
         run: echo "Release File Name ${{ steps.generate_release_file_name.outputs.release_file_name }}"
+        shell: cmd
       
       shell: bash
