--- a/.github/workflows/test_build_windows.yml
+++ b/.github/workflows/test_build_windows.yml
@@ -12,7 +12,7 @@ jobs:
         matrix:
           os: [windows-2019]
           architecture: [win64]
-          build-type: [Release, Debug]
+          build-type: [Release]
           
       runs-on: ${{ matrix.os }}
       steps:
