--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,18 @@ function(assign_source_group)
 endfunction(assign_source_group)
 
 if (WIN32)
-    #TODO
+    # set(CMAKE_CXX_FLAGS "-fPIC")
+    # add_definitions(-DWEBRTC_POSIX)
+
+    list(APPEND boringssl_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/third_party/boringssl/src/include")
+    if (CMAKE_BUILD_TYPE MATCHES Debug)
+        list(APPEND webrtc_native_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/Debug/obj/libwebrtc.lib")
+        list(APPEND boringssl_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/Debug/obj/third_party/boringssl/libboringssl.lib")
+    endif ()
+    if (CMAKE_BUILD_TYPE MATCHES Release)
+        list(APPEND webrtc_native_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/Release/obj/libwebrtc.lib")
+        list(APPEND boringssl_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/Release/obj/third_party/boringssl/libboringssl.lib")
+    endif ()
 elseif (UNIX)
     set(CMAKE_CXX_FLAGS "-fPIC")
     add_definitions(-DWEBRTC_POSIX)
