--- a/3rdParty/webrtc_native/CMakeLists.txt
+++ b/3rdParty/webrtc_native/CMakeLists.txt
@@ -1,7 +1,6 @@
+set(WEBRTC_CHECKOUT 742109a89d35d95bba055b036d8dbbe2ebcce6ee)
 
-if (WIN32)
-    #TODO
-elseif (UNIX)
+
     set(ENV{PATH} $ENV{PATH}:${CMAKE_CURRENT_LIST_DIR}/../depot_tools/)
 
     if(NOT EXISTS "${CMAKE_CURRENT_LIST_DIR}/webrtc")
@@ -35,7 +34,7 @@ elseif (UNIX)
         endif()
 
         execute_process(
-                COMMAND git checkout 742109a89d35d95bba055b036d8dbbe2ebcce6ee
+                COMMAND git checkout ${WEBRTC_CHECKOUT}
                 WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/webrtc/src"
                 RESULT_VARIABLE git_checkout_webrtc_result
         )
@@ -140,4 +139,4 @@ elseif (UNIX)
     	FILES_MATCHING PATTERN "*.h")
 
 
-endif (WIN32)
+
