--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,9 @@ elseif (CMAKE_BUILD_ARCHITECTURE MATCHES arm32)
     SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
     set(CMAKE_SYSROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/build/linux/debian_sid_arm-sysroot)
     set(CMAKE_C_COMPILER /usr/bin/arm-linux-gnueabihf-gcc)
-    set(CMAKE_CXX_COMPILER /usr/bin/arm-linux-gnueabihf-g++)    
+    set(CMAKE_CXX_COMPILER /usr/bin/arm-linux-gnueabihf-g++)
+elseif (CMAKE_BUILD_ARCHITECTURE MATCHES win64)
+    message(STATUS "Windows build not fully supported yet.")
 else()
     # Will use native compiler
     set(CMAKE_BUILD_ARCHITECTURE amd64)
