--- a/3rdParty/webrtc_native/CMakeLists.txt
+++ b/3rdParty/webrtc_native/CMakeLists.txt
@@ -1,7 +1,8 @@
 set(WEBRTC_CHECKOUT 742109a89d35d95bba055b036d8dbbe2ebcce6ee)
 
 if(WIN32)
-        set(ENV{PATH} $ENV{PATH};${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/)
+        list(APPEND CMAKE_PROGRAM_PATH  "${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/")        
+        
         file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/webrtc)
         
         execute_process(
