--- a/3rdParty/webrtc_native/CMakeLists.txt
+++ b/3rdParty/webrtc_native/CMakeLists.txt
@@ -17,7 +17,7 @@ if(WIN32)
         endif()
         
         execute_process(
-                COMMAND gclient sync --with_branch_heads --with_tags
+                COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/gclient sync --with_branch_heads --with_tags
                 WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/webrtc"
                 RESULT_VARIABLE gclient_sync_webrtc_result
         )
