--- a/.github/workflows/test_build_windows.yml
+++ b/.github/workflows/test_build_windows.yml
@@ -25,10 +25,16 @@ jobs:
         run:   |
           echo "::add-path::C:\msys64\usr\bin"
           echo "::add-path::D:/a/webrtc-native-build/webrtc-native-build/3rdParty/depot_tools"
+      
+      - name: Read package.json
+        id: package
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./VERSION
           
       - name: Generate Version Output
         id: generate_version_output
-        run: echo ::set-output name=version::$(cat VERSION)
+        run: echo ::set-output name=version::${{ steps.package.outputs.content }}
         shell: cmd
         
       - name: Print Version Information
