--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -50,7 +50,7 @@ jobs:
     needs: create-release
     strategy:
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04]
+        os: [ubuntu-16-04, ubuntu-18.04, ubuntu-20.04]
         architecture: [arm32, arm64, amd64]
         build-type: [Release, Debug]
 
