--- a/3rdParty/webrtc_native/CMakeLists.txt
+++ b/3rdParty/webrtc_native/CMakeLists.txt
@@ -1,4 +1,6 @@
-set(WEBRTC_CHECKOUT 742109a89d35d95bba055b036d8dbbe2ebcce6ee)
+# set(WEBRTC_CHECKOUT 742109a89d35d95bba055b036d8dbbe2ebcce6ee)
+# M73 = 8bb9968c6c8643b108e1e972bf77256a97588890
+set(WEBRTC_CHECKOUT 8bb9968c6c8643b108e1e972bf77256a97588890)
 
 if(WIN32)
         
