--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,29 +96,17 @@ endfunction(assign_source_group)
 if (WIN32)
     # set(CMAKE_CXX_FLAGS "-fPIC")
     # add_definitions(-DWEBRTC_POSIX)
-
-    list(APPEND boringssl_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/third_party/boringssl/src/include")
-    if (CMAKE_BUILD_TYPE MATCHES Debug)
-        list(APPEND webrtc_native_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/Debug/obj/libwebrtc.lib")
-        list(APPEND boringssl_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/Debug/obj/third_party/boringssl/libboringssl.lib")
-    endif ()
-    if (CMAKE_BUILD_TYPE MATCHES Release)
-        list(APPEND webrtc_native_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/Release/obj/libwebrtc.lib")
-        list(APPEND boringssl_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/Release/obj/third_party/boringssl/libboringssl.lib")
-    endif ()
+    list(APPEND boringssl_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/third_party/boringssl/src/include")  
+    list(APPEND webrtc_native_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/${CMAKE_BUILD_TYPE}/obj/libwebrtc.lib")
+    list(APPEND boringssl_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/${CMAKE_BUILD_TYPE}/obj/third_party/boringssl/libboringssl.lib")
+    list(APPEND libyuv_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/${CMAKE_BUILD_TYPE}/obj/third_party/libyuv/libyuv_internal.lib")
 elseif (UNIX)
     set(CMAKE_CXX_FLAGS "-fPIC")
     add_definitions(-DWEBRTC_POSIX)
-
     list(APPEND boringssl_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/third_party/boringssl/src/include")
-    if (CMAKE_BUILD_TYPE MATCHES Debug)
-        list(APPEND webrtc_native_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/Debug/obj/libwebrtc.a" dl X11 expat)
-        list(APPEND boringssl_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/Debug/obj/third_party/boringssl/libboringssl.a")
-    endif ()
-    if (CMAKE_BUILD_TYPE MATCHES Release)
-        list(APPEND webrtc_native_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/Release/obj/libwebrtc.a" dl X11 expat)
-        list(APPEND boringssl_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/Release/obj/third_party/boringssl/libboringssl.a")
-    endif ()
+    list(APPEND webrtc_native_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/${CMAKE_BUILD_TYPE}/obj/libwebrtc.a" dl X11 expat)
+    list(APPEND boringssl_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/${CMAKE_BUILD_TYPE}/obj/third_party/boringssl/libboringssl.a")
+    list(APPEND libyuv_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/${CMAKE_BUILD_TYPE}/obj/third_party/libyuv/libyuv_internal.a")
 endif (WIN32)
 
 
