--- a/.github/workflows/build_only.yml
+++ b/.github/workflows/build_only.yml
@@ -41,7 +41,8 @@ jobs:
       shell: bash
        
     - name: Install system dependencies
-      run: | 
+      run: |
+        sudo apt-get update
         sudo apt-get install ninja-build cmake build-essential libssl-dev libboost-all-dev 
         sudo apt-get install libglib2.0-dev libgtk-3-dev libpulse-dev libasound2-dev 
         sudo apt-get install g++-aarch64-linux-gnu gcc-aarch64-linux-gnu
