--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -31,7 +31,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
         tag_name: ${{ steps.generate_version_output.outputs.version }}
-        release_name: webrtc-native-build-${{ steps.generate_version_output.outputs.version }}
+        release_name: webrtc-native-build-${{ steps.generate_version_output.outputs.version }}-temp2
         body: |
             Latest build of webrtc-native-build
             - This is a prerelease, use at your own risks.
@@ -141,7 +141,14 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
-           
+ 
+    - name: Get Upload URL
+      id: get_release_info
+      run: |
+        echo "::set-output name=upload_url::$(cat release_url.txt)"
+        ls -l
+        cat release_url.txt   
+
     - name: Generate Version Output
       id: generate_version_output
       run: echo "::set-output name=version::$(cat VERSION)"
