--- a/.github/workflows/test_build_mac.yml
+++ b/.github/workflows/test_build_mac.yml
@@ -9,7 +9,7 @@ jobs:
   build-mac:
     strategy:
       matrix:
-        os: [macos-10.15]
+        os: [macos-11, macos-10.15]
         architecture: [osx64]
         build-type: [Release, Debug]
 
