--- a/3rdParty/webrtc_native/CMakeLists.txt
+++ b/3rdParty/webrtc_native/CMakeLists.txt
@@ -10,7 +10,7 @@ if(WIN32)
         file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/webrtc)
         
         execute_process(
-                COMMAND fetch.bat webrtc
+                COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/fetch.bat webrtc
                 WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/webrtc"
                 RESULT_VARIABLE fetch_webrtc_result
         )
@@ -19,14 +19,13 @@ if(WIN32)
         endif()
         
         execute_process(
-                COMMAND gclient.bat sync --with_branch_heads --with_tags
+                COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/gclient.bat sync --with_branch_heads --with_tags
                 WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/webrtc"
                 RESULT_VARIABLE gclient_sync_webrtc_result
         )
         if(NOT ${gclient_sync_webrtc_result} EQUAL 0)
             message(FATAL_ERROR "\"gclient sync --with_branch_heads --with_tags\" failed (${gclient_sync_webrtc_result})")
         endif()
-        
 else(WIN32)
     set(ENV{PATH} $ENV{PATH}:${CMAKE_CURRENT_LIST_DIR}/../depot_tools/)
 
