--- a/.github/workflows/test_build_linux.yml
+++ b/.github/workflows/test_build_linux.yml
@@ -1,5 +1,5 @@
 # This workflow will create a release and build multiple versions of the webrtc library.
-name: build_only
+name: build_only_linux
 
 on:
   workflow_dispatch:
