--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ elseif (CMAKE_BUILD_ARCHITECTURE MATCHES arm32)
     set(CMAKE_C_COMPILER /usr/bin/arm-linux-gnueabihf-gcc)
     set(CMAKE_CXX_COMPILER /usr/bin/arm-linux-gnueabihf-g++)
 elseif (CMAKE_BUILD_ARCHITECTURE MATCHES win64)
+    set(DEPOT_TOOLS_WIN_TOOLCHAIN OFF)
     message(STATUS "Windows build not fully supported yet.")
 else()
     # Will use native compiler
