--- a/.github/workflows/test_build_windows.yml
+++ b/.github/workflows/test_build_windows.yml
@@ -19,7 +19,19 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-      
+          
+      - name: Disk Cleanup
+        run: |
+            Get-PSDrive
+            docker rmi $(docker images -q -a)
+            Remove-Item -Recurse -Force $Env:ANDROID_HOME
+            Remove-Item -Recurse -Force $Env:ANDROID_NDK_HOME
+            Remove-Item -Recurse -Force $Env:JAVA_HOME_11_X64
+            Remove-Item -Recurse -Force $Env:JAVA_HOME_8_X64
+            Remove-Item -Recurse -Force $Env:JAVA_HOME_7_X64
+            Get-PSDrive
+        shell: powershell
+        
       - name:  "add-path"
         shell: cmd
         run:   |
@@ -50,7 +62,6 @@ jobs:
       - name: Print Release File Name
         run: echo "Release File Name ${{ steps.generate_release_file_name.outputs.release_file_name }}"
         shell: cmd
-        
         
       - name: Create build directory
         working-directory: .
