--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "3rdParty/depot_tools"]
 	path = 3rdParty/depot_tools
-	url = https://chromium.googlesource.com/chromium/tools/depot_tools
+	url = https://chromium.googlesource.com/chromium/tools/depot_tools.git
