--- a/3rdParty/webrtc_native/CMakeLists.txt
+++ b/3rdParty/webrtc_native/CMakeLists.txt
@@ -2,22 +2,22 @@
 set(WEBRTC_CHECKOUT e7d9f74b256605556726c64dacd518a105ba872f)
 
 if(WIN32)
-        
-        list(APPEND CMAKE_PROGRAM_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/")        
-        
+
+        list(APPEND CMAKE_PROGRAM_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/")
+
         message(STATUS "Current PATH: $ENV{PATH}")
-        
+
         file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/webrtc)
-        
+
         execute_process(
-                COMMAND echo y | ${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/fetch.bat --nohooks --no-history webrtc
+                COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/fetch.bat --no-history webrtc
                 WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/webrtc"
                 RESULT_VARIABLE fetch_webrtc_result
         )
         if(NOT ${fetch_webrtc_result} EQUAL 0)
-            message(FATAL_ERROR "\"fetch --nohooks --no-history webrtc\" failed (${fetch_webrtc_result})")
+            message(FATAL_ERROR "\"fetch --no-history webrtc\" failed (${fetch_webrtc_result})")
         endif()
-        
+
         execute_process(
                 COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../depot_tools/gclient.bat sync --no-history --with_branch_heads --with_tags
                 WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/webrtc"
@@ -85,7 +85,7 @@ else(WIN32)
                 WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/webrtc/src/build/linux/sysroot_scripts"
                 RESULT_VARIABLE build_sysroot_architecture
         )
-            
+
         if(NOT ${build_sysroot_architecture} EQUAL 0)
             message(FATAL_ERROR "\"python install-sysroot.py --arch=arm64\" failed (${build_sysroot_architecture})")
         endif()
@@ -98,7 +98,7 @@ else(WIN32)
                 WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/webrtc/src/build/linux/sysroot_scripts"
                 RESULT_VARIABLE build_sysroot_architecture
         )
-            
+
         if(NOT ${build_sysroot_architecture} EQUAL 0)
             message(FATAL_ERROR "\"python install-sysroot.py --arch=arm\" failed (${build_sysroot_architecture})")
         endif()
@@ -169,4 +169,3 @@ install(DIRECTORY webrtc/src/third_party/boringssl/src/include/openssl DESTINATI
 install(FILES webrtc/src/third_party/libyuv/include/libyuv.h DESTINATION include)
 install(DIRECTORY webrtc/src/third_party/libyuv/include/libyuv DESTINATION include
     FILES_MATCHING PATTERN "*.h")
-
