--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ if (CMAKE_BUILD_ARCHITECTURE MATCHES arm64)
     set(CMAKE_SYSROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/build/linux/debian_sid_arm64-sysroot)
     set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
     set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++)
-elseif (CMAKE_BUILD_ARCHITECTURE MATCHES arm32)    
+elseif (CMAKE_BUILD_ARCHITECTURE MATCHES arm32)
     set(CMAKE_SYSTEM_NAME Linux)
     set(CMAKE_SYSTEM_PROCESSOR armhf)
     SET(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM BOTH)
@@ -23,8 +23,8 @@ elseif (CMAKE_BUILD_ARCHITECTURE MATCHES arm32)
     set(CMAKE_C_COMPILER /usr/bin/arm-linux-gnueabihf-gcc)
     set(CMAKE_CXX_COMPILER /usr/bin/arm-linux-gnueabihf-g++)
 elseif (CMAKE_BUILD_ARCHITECTURE MATCHES win64)
-    set(DEPOT_TOOLS_WIN_TOOLCHAIN OFF)
-    set(GYP_MSVS_VERSION 2019)
+    set(ENV{DEPOT_TOOLS_WIN_TOOLCHAIN} 0)
+    # set(GYP_MSVS_VERSION 2019)
     message(STATUS "Windows build not fully supported yet.")
 else()
     # Will use native compiler
@@ -103,7 +103,7 @@ endfunction(assign_source_group)
 if (WIN32)
     # set(CMAKE_CXX_FLAGS "-fPIC")
     # add_definitions(-DWEBRTC_POSIX)
-    list(APPEND boringssl_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/third_party/boringssl/src/include")  
+    list(APPEND boringssl_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/third_party/boringssl/src/include")
     list(APPEND webrtc_native_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/${CMAKE_BUILD_TYPE}/obj/libwebrtc.lib")
     list(APPEND boringssl_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/${CMAKE_BUILD_TYPE}/obj/third_party/boringssl/libboringssl.lib")
     list(APPEND libyuv_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/3rdParty/webrtc_native/webrtc/src/out/${CMAKE_BUILD_TYPE}/obj/third_party/libyuv/libyuv_internal.lib")
@@ -118,5 +118,3 @@ endif (WIN32)
 
 
 add_subdirectory(3rdParty)
-
-
